Update food options.

--- a/index.html
+++ b/index.html
@@ -259,6 +259,9 @@
           <p class="text-body text-body--medium">
             There are lots of food options nearby: find a spot to enjoy
             lunch with new friends!
+            <a href="https://www.google.com/maps/d/u/0/edit?mid=1_ah4yuZdoh8Ze8hr2LM3WYSI_BDiODc&usp=sharing" class="anchor-inline" target="_blank">
+              See a map with lots of options here!
+            </a>
           </p>
           <div class="trifold">
             <div class="trifold-fold">
@@ -268,20 +271,32 @@
                   Food Trucks, across Walnut St next to Pottruck Gym
                 </li>
                 <li class="text-body text-body--small">
+                  Latao Hotpot, 3717 Chestnut St
+                </li>
+                <li class="text-body text-body--small">
+                  Louie Louie, 3611 Walnut St
+                </li>
+                <li class="text-body text-body--small">
                   Honeygrow, 3731 Walnut St
                 </li>
-                <li></li>
-                <li></li>
               </ul>
             </div>
             <div class="trifold-fold">
               <h3 class="heading-secondary">Two Blocks</h3>
               <p class="text-body text-body--small">
                 <ul>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li class="text-body text-body--small">
+                    Raising Cane's Chicken Fingers, 3925 Walnut St
+                  </li>
+                  <li class="text-body text-body--small">
+                    Hummus Grill, 3931 Walnut St
+                  </li>
+                  <li class="text-body text-body--small">
+                    Sweetgreen, 3925 Walnut St
+                  </li>
+                  <li class="text-body text-body--small">
+                    &Pizza, 3925 Walnut St
+                  </li>
                 </ul>
               </p>
             </div>
@@ -289,10 +304,18 @@
               <h3 class="heading-secondary">Three Blocks</h3>
               <p class="text-body text-body--small">
                 <ul>
-                  <li></li>
-                  <li></li>
-                  <li></li>
-                  <li></li>
+                  <li class="text-body text-body--small">
+                    Han Dynasty, 3711 Market St
+                  </li>
+                  <li class="text-body text-body--small">
+                    Jane G's Dimsum House, 3939 Chestnut St
+                  </li>
+                  <li class="text-body text-body--small">
+                    The White Dog, 3420 Sansom St
+                  </li>
+                  <li class="text-body text-body--small">
+                    Greek Lady, 222 S. 40th St
+                  </li>
                 </ul>
               </p>
             </div>
