Swapped Harper's link to Behance

--- a/index.html
+++ b/index.html
@@ -930,14 +930,14 @@
                 </a>
                 <a
                   class="organizer-social"
-                  href="https://www.twitter.com/hyatvin"
+                  href="https://www.behance.net/yatvin"
                   target="_blank"
                   rel="noopener nofollow"
                 >
                   <img
-                    aria-label="Twitter icon"
+                    aria-label="Globe icon"
                     class="organizer-social-icon"
-                    src="images/icons/twitter.svg"
+                    src="images/icons/globe.svg"
                   />
                 </a>
               </div>
