Remove become a sponsor section.

--- a/index.html
+++ b/index.html
@@ -619,7 +619,7 @@
         </div>
       </section>
 
-      <section class="section" id="become-a-sponsor">
+      <!-- section class="section" id="become-a-sponsor">
         <div class="section-contents section-contents--become-a-sponsor">
           <h2 class="heading-primary">Become a sponsor</h2>
 
@@ -639,7 +639,7 @@
             </a>
           </div>
         </div>
-      </section>
+      </section -->
 
       <section class="section section--inverted" id="organizers">
         <div class="section-contents section-contents--organizers">
@@ -708,6 +708,17 @@
               />
               <div class="organizer-details">
                 <div class="organizer-name">JM Conway</div>
+              </div>
+            </li>
+
+            <li class="organizer">
+              <img
+                alt="Photo of Bill Danbury"
+                class="organizer-photo"
+                src="images/organizers/bill-danbury.jpg"
+              />
+              <div class="organizer-details">
+                <div class="organizer-name">Bill Danbury</div>
               </div>
             </li>
 
