--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
         <div class="section-contents section-contents--efficiency">
           <h2 class="heading-primary">Efficiency</h2>
           <p class="text-body">
-            BarCamp Philly is a Green Zero-Waste Event. Before you use the
-            garbage, look for a compost bin. There is also a station to refill
-            water bottles by the bathroom to help reduce waste from plastic
+            BarCamp Philly is committed to wasting as little as possible. There
+            are two water filling stations by the restrooms to refill bottles.
+            We will provide compostable cups for those who do not have water
             bottles. Help us save the planet.
           </p>
         </div>
