Update CoC - remove 'virtual'

--- a/coc/index.html
+++ b/coc/index.html
@@ -116,7 +116,7 @@
           </ul>
           <div class="heading-secondary">Dealing with Conflict</div>
           <p class="text-body text-body--medium">
-            While it will be impractical for the organizers to prescreen or otherwise vet the content of every virtual talk we encourage two things - if you experience any elements you find uncomfortable during a talk/presentation: Please use the “rule of two feet” and feel free to leave any talk or discussion you find uncomfortable. Further, please feel free to make mention of your discomfort to one of the organizers. 
+            While it will be impractical for the organizers to prescreen or otherwise vet the content sessions at an event like BarCamp Philly, we encourage two things if you experience any elements you find uncomfortable during a talk/presentation: please use the “rule of two feet” and feel free to leave any talk or discussion you find uncomfortable. Further, please feel free to make mention of your discomfort to one of the organizers. 
           </p>
           <p class="text-body text-body--medium">            
             If you experience harassment, or any form of abuse, or if a perpetrator is interfering with your participation or presence in BarCamp’s activities, please approach any BarCamp Philly organizer. The organizers are here to acknowledge, and attempt to help with any conflicts arising from the violation of our policies. You may find organizers throughout the venue wearing purple BarCamp shirts.
