Update Harper's link.

--- a/index.html
+++ b/index.html
@@ -929,6 +929,18 @@
                 <div class="organizer-name">Harper Yatvin</div>
                 <a
                   class="organizer-social"
+                  href="https://www.behance.net/yatvin"
+                  target="_blank"
+                  rel="noopener nofollow"
+                >
+                  <img
+                    aria-label="Globe icon"
+                    class="organizer-social-icon"
+                    src="images/icons/globe.svg"
+                  />
+                </a>
+                <a
+                  class="organizer-social"
                   href="https://www.instagram.com/harperyatvin"
                   target="_blank"
                   rel="noopener nofollow"
@@ -937,18 +949,6 @@
                     aria-label="Instagram icon"
                     class="organizer-social-icon"
                     src="images/icons/instagram.svg"
-                  />
-                </a>
-                <a
-                  class="organizer-social"
-                  href="https://www.twitter.com/hyatvin"
-                  target="_blank"
-                  rel="noopener nofollow"
-                >
-                  <img
-                    aria-label="Twitter icon"
-                    class="organizer-social-icon"
-                    src="images/icons/twitter.svg"
                   />
                 </a>
               </div>
